First attempt to unify Confluent Cloud and local code